# pyaixm

./: LICENSE  Readme.md  example.py  pyproject.toml  setup.cfg
pyaixm/: __init__.py  __main__.py  aixm_schema.yaml  aixm_types.py  parse_aixm.py
