[metadata]
name = pyaixm
version = 0.0.2
author = volkerp
description = Parse AIXM data to python objects
url = https://github.com/volkerp/pyaixm
license = 'MIT'

[options]
packages = pyaixm
install_requires = pyyaml; lxml
python_requires = >= 3.8
include_package_data = True

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    my_script = pyaixm.parse_aixm:main